# bitwarden_backup

./: README.md  pyproject.toml
src/bitwarden_backup/: bwbackup.py
